--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3060420220922001",
     "echarts": "5.3.2",
     "pinia": "^2.0.14",
+    "scss": "^0.2.4",
     "vue": "^3.2.36",
     "vue-i18n": "^9.1.10"
   },
@@ -57,6 +58,7 @@
     "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3060420220922001",
     "@types/node": "^17.0.35",
     "autoprefixer": "^10.4.7",
+    "sass-loader": "^13.2.0",
     "unplugin-vue-components": "^0.18.5",
     "vite": "^2.9.9"
   }
