--- a/package.json
+++ b/package.json
@@ -32,34 +32,35 @@
     "build:quickapp-webview-union": "uni build -p quickapp-webview-union"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-alpha-3060420220922001",
-    "@dcloudio/uni-app-plus": "3.0.0-alpha-3060420220922001",
-    "@dcloudio/uni-components": "3.0.0-alpha-3060420220922001",
-    "@dcloudio/uni-h5": "3.0.0-alpha-3060420220922001",
+    "@dcloudio/uni-app": "^3.0.0-3060520221121001",
+    "@dcloudio/uni-app-plus": "^3.0.0-3060520221121001",
+    "@dcloudio/uni-components": "^3.0.0-3060520221121001",
+    "@dcloudio/uni-h5": "^3.0.0-3060520221121001",
     "@dcloudio/uni-helper-json": "^1.0.13",
-    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-3060420220922001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-3060420220922001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-3060420220922001",
-    "@dcloudio/uni-mp-lark": "3.0.0-alpha-3060420220922001",
-    "@dcloudio/uni-mp-qq": "3.0.0-alpha-3060420220922001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3060420220922001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3060420220922001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3060420220922001",
+    "@dcloudio/uni-mp-alipay": "^3.0.0-3060520221121001",
+    "@dcloudio/uni-mp-baidu": "^3.0.0-3060520221121001",
+    "@dcloudio/uni-mp-kuaishou": "^3.0.0-3060520221121001",
+    "@dcloudio/uni-mp-lark": "^3.0.0-3060520221121001",
+    "@dcloudio/uni-mp-qq": "^3.0.0-3060520221121001",
+    "@dcloudio/uni-mp-toutiao": "^3.0.0-3060520221121001",
+    "@dcloudio/uni-mp-weixin": "^3.0.0-3060520221121001",
+    "@dcloudio/uni-quickapp-webview": "^3.0.0-3060520221121001",
     "echarts": "5.3.2",
     "pinia": "^2.0.14",
     "scss": "^0.2.4",
-    "vue": "^3.2.36",
-    "vue-i18n": "^9.1.10"
+    "vue": "^3.2.39",
+    "vue-i18n": "^9.2.2"
   },
   "devDependencies": {
-    "@dcloudio/types": "^3.0.8",
-    "@dcloudio/uni-automator": "3.0.0-alpha-3060420220922001",
-    "@dcloudio/uni-cli-shared": "3.0.0-alpha-3060420220922001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3060420220922001",
+    "@dcloudio/types": "^3.0.20",
+    "@dcloudio/uni-automator": "^3.0.0-3060520221121001",
+    "@dcloudio/uni-cli-shared": "^3.0.0-3060520221121001",
+    "@dcloudio/uni-stacktracey": "^3.0.0-3060520221121001",
+    "@dcloudio/vite-plugin-uni": "^3.0.0-3060520221121001",
     "@types/node": "^17.0.35",
     "autoprefixer": "^10.4.7",
     "sass-loader": "^13.2.0",
     "unplugin-vue-components": "^0.18.5",
-    "vite": "^2.9.9"
+    "vite": "^2.9.14"
   }
 }
